# engram

./: .engram-codebook.yaml  .gitignore  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  buf.gen.yaml  context-compression-punch-list.md  engram-proxy-review.md  engram-report-2026-03-28.md  go.mod  go.sum  high-impact-compression-punch-list.md  openclaw-zero-touch-punch-list.md  statusline-context-correlation-review.md  zero-touch-install-guidance.md  zero-touch-install-punch-list.md
.github/workflows/: ci.yml  release.yml
bench/identity/: bench_test.go
cmd/engram/: advisor.go  analyze.go  help.go  install.go  install_plugin.go  install_test.go  main.go  mcp.go  mcp_test.go  paths.go  paths_test.go  readiness.go  root.go  root_test.go  serve.go  serve_test.go  status.go  status_test.go  statusline.go  update.go  version.go  version_test.go
codebooks/: travel.yaml
codebooks/response/: anthropic.yaml  openai.yaml
demo/: main.go
demo/travel/: main.go
docs/: cli-reference.md  engram-native-simulation-platform-spec.md  getting-started.md  integration-guide.md
install/launchd/: com.engram.daemon.plist
install/systemd/: engram.service
internal/auth/: CLAUDE.md  jwt.go  jwt_test.go
internal/config/: config.go  config_test.go
internal/context/: codebook.go  codebook_test.go  history.go  history_test.go  response_codebook.go  response_codebook_test.go
internal/daemon/: client.go  client_test.go  integration_test.go  listener.go  listener_test.go  rpc.go  server.go  server_test.go
internal/errors/: CLAUDE.md  errors.go  errors_test.go
internal/events/: CLAUDE.md  bus.go  bus_test.go
internal/proxy/: proxy.go  (+11 more)
sdk/: pyproject.toml
sdk/go/: engram.go  engram_bench_test.go  engram_test.go  go.mod
sdk/node/: package.json
sdk/node/src/: index.d.ts  index.js  index.test.js
sdk/python/: pyproject.toml
sdk/python/src/engram/: __init__.py  client.py  errors.py
sdk/python/src/engram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/tests/: test_client.py  test_integration.py  test_models.py  test_serializer.py  test_yaml_io.py
sdk/src/engram.egg-info/: PKG-INFO  SOURCES.txt
sdk/tests/: test_client.py  test_codebook.py  test_discovery.py  test_errors.py  test_plugins.py  test_session.py
(+105 files in other folders)
