[project]
name = "engram"
version = "0.2.0"
description = "Python SDK for the Engram compression daemon"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Erik Meyer"},
]
keywords = ["engram", "compression", "llm", "context", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pythondatascrape/engram"
Repository = "https://github.com/pythondatascrape/engram"
Issues = "https://github.com/pythondatascrape/engram/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
